--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,9 @@ dependencies {
     compile 'com.sun.mail:android-mail:1.5.5'
     compile 'com.sun.mail:android-activation:1.5.5'
 
+    // Tuned calendar
     compile 'com.roomorama:caldroid:3.0.1'
+
+    // Tuned Video View
+    compile 'com.linsea:universalvideoview:1.1.0@aar'
 }
