--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion '25.0.3'
     defaultConfig {
-        applicationId "com.example.mario.ongproject"
+        applicationId "com.mario.ongherdeiros"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
